added render functions and some jQuery

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<h1>Ye Favorite Pirate Bartender</h1>
 		<div class="questionContainer">
 		<div class="question"></div>
-		<button class="yes">Yup</button>
-		<button class="no">Nope</button>
+		<div class="drink"></div>
+		<button class="yesBtn">Yup</button>
+		<button class="noBtn">Nope</button>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="app.js"></script>
