--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 </head>
 <body>
 	<h1>Ye Favorite Pirate Bartender</h1>
-		<div class="questionContainer">
+	<div class="questionContainer">
 		<div class="question"></div>
-		<div class="drink"></div>
 		<button class="yesBtn">Yup</button>
 		<button class="noBtn">Nope</button>
+	</div>
+	<div class="drinkContainer" style="display: none;">
+		<h1>Here be ye drink!</h1>
+		<ul class="drinkIngredients"></ul>
+		<button>Gift me another drink!</button>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="app.js"></script>
