--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 		<button class="otherDrinkBtn">Gift me another drink!</button>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
