added drink name function and styled results

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</div>
 	<div class="drinkContainer">
 		<h1>Here be ye drink!</h1>
+		<div class="drinkName"></div>
 		<ul class="drinkIngredients"></ul>
 		<button class="otherDrinkBtn">Gift me another drink!</button>
 	</div>
